# wolensing

./: .gitignore  .readthedocs.yaml  README.rst  Untitled.ipynb  __init__.py  conftest.py  local.txt  local1.txt  mc_lens.py  paper.md  pyproject.toml  pyproject_master.toml  requirements.txt  run.txt  setup.py  test.py  test_ft.txt
amplification_factor/: amplification_factor.py
amplification_factor_trial/: amplification_factor.py
docs/: amplification_factor.rst  conf.py  index.rst  plot.rst  requirements.txt  utils.rst
examples/: F_tilde.txt  SimonWorking&NotWorking_example_type2(1).ipynb  Untitled.ipynb  chabrier_densityf.py  debug.py  embedded_2.ipynb  embedded_lens.ipynb  embedded_lens_1.ipynb  embedded_lens_2.ipynb  embedded_multilens.py  embedded_type2.py  four_pm.ipynb  microlenses_multi.py  microlenses_single.ipynb  microlenses_single.py  microlenses_single_work.py  mismatch.py  nfw.py  plot.py  plot_amp.py  plot_amplification_factor.ipynb  plot_amplification_factor_Fws.py  pm_test.ipynb  point_mass.ipynb  pysr_demo.ipynb  pysr_tf.py  sie.py  singlelens.ipynb  singlelens_pm.ipynb  sis.py  test.ipynb  test.py  wave optics low frequency linearization test (different setup of 4 point masses in a lens).ipynb
lensmodels/: SIS.py  lens.py  morse_indices.py  potential.py
paper/: joss_make_latex.sh  paper.bib  paper.md  paper.tex
plot/: plot.py
test/: amplification_factor_test.py  bincount.txt  bins.txt  conftest.py  test_sis_F_tilde.txt  test_sis_Fws.txt  test_sis_ts.txt  test_sis_ws.txt
utils/: .geometrical_limit.py.swp  Untitled.ipynb  histogram.py  (+3 more)
(+200 files in other folders)
