[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.0.0"
name = "wolensing"
authors = [
  { name="Simon Man-Chun Yeung, Mark Ho-Yeuk Cheung", email="yeungm@uwm.edu" },
]
description = "A package for computing wave optics amplification factor."
readme = "README.rst"
requires-python = ">=3.7,<3.12"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "lenstronomy",
  "jax==0.2.17",
  "jaxlib==0.1.65",
  "matplotlib",
  "numpy>=1.18.1",
  "fast_histogram",
  "scipy>1.4.1",
  "pycbc",
  "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/manchunyeung/wolensing"

[testpypi]
  username = manchunyeung
  password = pypi-AgENdGVzdC5weXBpLm9yZwIkYmUzOTI0NDUtNTg3NS00ZDg3LWEzMTQtZjM2YzJhMTk5MzBjAAIqWzMsImY3NDkxMWZiLTA0NTUtNDQ2Zi1hOGQyLTJkODc3YzA5MWM1ZiJdAAAGIDwWozOxb41vRkhNLmQFETc1yRel_BRtujeRY6A5mv0M
